Use cmake argumement -DPYVER=3.6 to build python3 library https://fermicloud140.fnal.gov/reviews/r/31/

--- a/framework/logicengine/cxx/readme
+++ b/framework/logicengine/cxx/readme
@@ -1,1 +1,7 @@
-yum install cmake make gcc-c++ boost-devel python-devel
+yum install cmake3 make gcc-c++ boost-devel python-devel python3-devel
+mkdir build
+cd build
+To link against python3
+cmake3 -DPYVER=3.6 .. 
+To link against system python 2.7
+cmake3 ..
