Logic-engine cleanups.

--- a/framework/logicengine/readme
+++ b/framework/logicengine/readme
@@ -1,5 +1,4 @@
-
-1. to build message anaylzer c++ library:
+1. to build the  c++ library:
 
   $ cd cxx
   $ mkdir build
@@ -10,7 +9,7 @@
 
 2. to make the RulesEngine class available to Python:
 
-  $ ln -s cxx/build/ErrorHandler/RE.so RE.so
+  $ ln -s cxx/build/RE.so RE.so
 
 3. run the tests for LogicEngine.py
 
